# sel

./: .editorconfig  .envrc  .gitignore  README.md  pyproject.toml
script/: get_driver.sh
src/sel/: base_page.py  login_page.py
tests/: conftest.py  test_basic_selenium.py  test_emadmin.py  test_pomlogin.py  test_pomtutorial.py  test_sel_login.py
tests/empages/: login_page.py
tests/tutorialpages/: login_page.py  search_page.py
